fix: properly whitespace between card

--- a/apps/gauzy/src/app/pages/employees/activity/screenshot/screenshot/screenshot.component.scss
+++ b/apps/gauzy/src/app/pages/employees/activity/screenshot/screenshot/screenshot.component.scss
@@ -121,8 +121,8 @@
   text-align: left;
   text-transform: lowercase;
 }
-@media screen and (min-width: 1890px) {
+@media screen and (min-width: 1690px) {
   .grid-container {
-    grid-template-columns: repeat(auto-fill, minmax(14.1rem, 1fr));
+    grid-template-columns: repeat(6, 1fr);
   }
 }
